Level: prevent images from jumping

--- a/src/Components/Level.module.css
+++ b/src/Components/Level.module.css
@@ -8,7 +8,8 @@
 }
 .images img {
 	width: 100%;
-	height: auto;
+	aspect-ratio: 1;
+	object-fit: cover;
 }
 
 .header {
